# PROJET-TRAITEMENT-IMAGE

./: .gitignore  README.md  pyproject.toml  requirements.txt
mammography-classification/: README.md  clean_dataset.py  evaluate.py  organize_dataset.py  predict.py  test_data_pipeline.py  test_model.py  train.py
mammography-classification/checkpoints/: .gitkeep
mammography-classification/configs/: config.yaml
mammography-classification/results/: test_metrics.txt
mammography-classification/src/data/: dataset.py  preprocessing.py  segmentation_dataset.py
mammography-classification/src/models/: efficientnet.py  unet.py
mammography-classification/src/training/: trainer.py
mammography-classification/src/utils/: __init__.py  metrics.py
mammography-classification/src/visualization/: __init__.py
mamography_segment/: extract_malignant_cases.py  segmentator_trainer.ipynb  train_segmentation.py  visualize_ground_truth.py  visualize_predictions.py
